<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Tradepop</string>
    <string name="tab_bar_products">Products</string>
    <string name="tab_bar_add">Add</string>
    <string name="tab_bar_profile">Profile</string>
    <string name="tab_bar_favorites">Favorites</string>
    <string name="tab_bar_transactions">Transactions</string>
    <string name="generic_error">Error</string>
    <string name="generic_ok">Ok</string>
    <string name="generic_loading">Loading...</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_delete">Delete</string>
    <!-- Category -->
    <string name="category_1">Vehicle</string>
    <string name="category_2">Clothing</string>
    <string name="category_3">Furniture</string>
    <string name="category_4">Sports</string>
    <string name="category_5">Electronics</string>
    <!-- NoUserFragment -->
    <string name="no_user_fragment_message">Looks like you haven\'t signed in yet.</string>
    <string name="no_user_to_login_button_message">Sign in</string>
    <!-- LoginRegisterActivity -->
    <string name="login_register_email_label">Email</string>
    <string name="login_register_username_label">Username</string>
    <string name="login_register_password_label">Password</string>
    <string name="login_register_login_title">Log in</string>
    <string name="login_register_register_title">Sign in</string>
    <string name="login_register_forgot_password">Forgot password?</string>
    <string name="loading_register_login_message">Login in...</string>
    <string name="loading_register_empty_fields_error_message">Fields can\'t be empty</string>
    <string name="loading_register_register_error_message">The email already exists or is invalid"</string>
    <string name="loading_register_login_error_message">The email or password is invalid</string>
    <string name="login_register_forgot_password_message">Write your email to reset your password</string>
    <string name="login_register_email_invalid">This email doesn\'t exists or is invalid</string>
    <string name="login_register_recover_password_email_sent">An email has been sent to reset your password</string>
    <string name="login_register_recover_password_email_sent_title">Reset password</string>
    <!-- NewProductFragment -->
    <string name="new_product_title_label">Title*</string>
    <string name="new_product_description_label">Description*</string>
    <string name="new_product_category_label">Category*</string>
    <string name="new_product_select_category_label">Select category</string>
    <string name="new_product_price_label">Price*</string>
    <string name="new_product_upload_button">Upload</string>
    <string name="new_product_empty_fields_error_message">Fields can\'t be empty</string>
    <string name="new_product_upload_product_error_message">An error has occurred please try again later</string>
    <!-- ProductsFragment -->
    <string name="products_error_fetching_products">An error has occurred please try again later</string>
    <!-- ProfileFragment -->
    <string name="profile_my_products_label">My products</string>
    <!-- ProductDetailsActivity -->
    <string name="product_details_title_label">Title</string>
    <string name="product_details_description_label">Description</string>
    <string name="product_details_category_label">Category</string>
    <string name="product_details_price_label">Price</string>
    <string name="product_details_buy_button">Buy</string>
    <string name="product_details_edit_button">Edit</string>
    <string name="product_details_delete_button">Delete</string>
    <string name="product_details_empty_fields_error_message">Fields can\'t be empty</string>
    <string name="product_details_error_message">An error has occurred please try again later</string>
    <string name="product_details_delete_product_message">Are you sure you want to delete this product?</string>
</resources>